--- a/configs/proxy_connect.yaml
+++ b/configs/proxy_connect.yaml
@@ -2,10 +2,9 @@
 # to an upstream listening on 127.0.0.1:10002
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: /tmp/admin_access.log
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       protocol: TCP
