--- a/configs/encapsulate_in_http2_post.yaml
+++ b/configs/encapsulate_in_http2_post.yaml
@@ -5,10 +5,9 @@
 
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: /tmp/admin_access.log
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       protocol: TCP
