--- a/configs/envoy_front_proxy.template.yaml
+++ b/configs/envoy_front_proxy.template.yaml
@@ -187,10 +187,9 @@ layered_runtime:
       admin_layer: {}
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: /tmp/admin_access.log
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       protocol: TCP
