--- a/configs/freebind/freebind.yaml
+++ b/configs/freebind/freebind.yaml
@@ -1,9 +1,8 @@
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: /tmp/admin_access.log
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       address: 127.0.0.1
