--- a/docs/root/configuration/best_practices/_include/edge.yaml
+++ b/docs/root/configuration/best_practices/_include/edge.yaml
@@ -20,10 +20,9 @@ overload_manager:
 
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: "/var/log/envoy_admin.log"
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       address: 127.0.0.1
