--- a/examples/csrf/samesite/front-envoy.yaml
+++ b/examples/csrf/samesite/front-envoy.yaml
@@ -123,10 +123,9 @@ static_resources:
 
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: /dev/null
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       address: 0.0.0.0
