--- a/test/server/config_validation/test_data/runtime_config.yaml
+++ b/test/server/config_validation/test_data/runtime_config.yaml
@@ -21,10 +21,9 @@ static_resources:
                 "@type": type.googleapis.com/google.protobuf.Struct
 admin:
   access_log:
-  - name: envoy.access_loggers.file
+  - name: envoy.access_loggers.stdoutput
     typed_config:
-      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-      path: "/dev/null"
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
   address:
     socket_address:
       address: 0.0.0.0
