--- a/tools/code_format/flake8.conf
+++ b/tools/code_format/flake8.conf
@@ -2,7 +2,10 @@
 [flake8]
 
 # TODO(phlax): make this an exclusive list and enable most tests
-select = N802,F401,E111,F821
+select = N802,F401,E111,F821,E501
+
+# ignore = F401,W503
+max-line-length = 100
 
 # TODO(phlax): exclude less
 exclude = build_docs,.git,generated,test,examples
