http: add HTTP/1.1 case preservation
1) Add new stateful header formatter extension point
2) Add preserve case formatter extension

Fixes https://github.com/envoyproxy/envoy/issues/14363

Signed-off-by: Matt Klein <mklein@lyft.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -174,3 +174,5 @@ extensions/filters/http/oauth2 @rgs1 @derekargueta @snowp
 /*/extensions/io_socket/user_space @lambdai @antoniovicente
 # Default UUID4 request ID extension
 /*/extensions/request_id/uuid @mattklein123 @alyssawilk
+# HTTP header formatters
+/*/extensions/http/header_formatters/preserve_case @mattklein123 @jmarantz
