--- a/.azure-pipelines/pipelines.yml
+++ b/.azure-pipelines/pipelines.yml
@@ -81,19 +81,19 @@ stages:
               artifactName: format
             condition: failed()
 
-      - job: docs
-        dependsOn: [] # this removes the implicit dependency on previous stage and causes this to run in parallel.
+      - job: schema
+        dependsOn: []
         condition: ne(variables['PostSubmit'], true)
         pool:
           vmImage: "ubuntu-18.04"
         steps:
           - task: Cache@2
             inputs:
-              key: "docs | ./WORKSPACE | **/*.bzl"
+              key: "schema | ./WORKSPACE | **/*.bzl"
               path: $(Build.StagingDirectory)/repository_cache
             continueOnError: true
 
-          - script: ci/run_envoy_docker.sh 'ci/do_ci.sh docs'
+          - script: ci/run_envoy_docker.sh 'ci/do_ci.sh schema'
             workingDirectory: $(Build.SourcesDirectory)
             env:
               AZP_BRANCH: $(Build.SourceBranch)
@@ -101,11 +101,11 @@ stages:
               BAZEL_REMOTE_CACHE: grpcs://remotebuildexecution.googleapis.com
               BAZEL_REMOTE_INSTANCE: projects/envoy-ci/instances/default_instance
               GCP_SERVICE_ACCOUNT_KEY: $(GcpServiceAccountKey)
-            displayName: "Generate docs"
+            displayName: "Generate schema"
 
           - script: |
-              ci/run_envoy_docker.sh 'ci/upload_gcs_artifact.sh /source/generated/docs docs'
-            displayName: "Upload Docs to GCS"
+              ci/run_envoy_docker.sh 'ci/upload_gcs_artifact.sh /source/generated/schema schema'
+            displayName: "Upload Schema to GCS"
             env:
               ENVOY_DOCKER_BUILD_DIR: $(Build.StagingDirectory)
               GCP_SERVICE_ACCOUNT_KEY: $(GcpServiceAccountKey)
