modularize ExampleDerivedDelegatingRoute to share between unit and int tests
Signed-off-by: Michael Meng <mmeng@lyft.com>

--- a/test/integration/filters/BUILD
+++ b/test/integration/filters/BUILD
@@ -447,5 +447,6 @@ envoy_cc_test_library(
         "//source/common/router:delegating_route_lib",
         "//source/extensions/filters/http/common:pass_through_filter_lib",
         "//test/extensions/filters/http/common:empty_http_filter_config_lib",
+        "//test/test_common:delegating_route_utility_lib",
     ],
 )
