fix: redis auth error when using eds
Signed-off-by: qinggniq <livewithblank@gmail.com>

--- a/examples/redis/Dockerfile-proxy
+++ b/examples/redis/Dockerfile-proxy
@@ -1,5 +1,8 @@
 FROM envoyproxy/envoy-dev:latest
 
-COPY ./envoy.yaml /etc/envoy.yaml
+COPY . /etc/
 RUN chmod go+r /etc/envoy.yaml
+RUN chmod go+r /etc/lds.yaml
+RUN chmod go+r /etc/cds.yaml
+
 CMD ["/usr/local/bin/envoy", "-c", "/etc/envoy.yaml", "-l", "debug", "--service-cluster", "proxy"]
