attempt to simplify interface
might not actually simplify things as it adds some complexity around
keeping a shared pointer around

Signed-off-by: Snow Pettersen <snowp@lyft.com>

--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -27,7 +27,9 @@ envoy_cc_library(
 envoy_cc_library(
     name = "containers_lib",
     hdrs = ["containers.h"],
-    deps = [":assert_lib"],
+    deps = [
+        ":cleanup_lib",
+        ],
 )
 
 envoy_cc_library(
