update action name, documentation
Signed-off-by: Snow Pettersen <snowp@lyft.com>

--- a/docs/root/configuration/http/http_filters/_include/composite.yaml
+++ b/docs/root/configuration/http/http_filters/_include/composite.yaml
@@ -46,7 +46,7 @@ static_resources:
                         action:
                           name: composite-action
                           typed_config:
-                            "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.CompositeAction
+                            "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                             typed_config:
                               name: http-fault
                               typed_config:
