--- a/source/extensions/filters/network/http_connection_manager/BUILD
+++ b/source/extensions/filters/network/http_connection_manager/BUILD
@@ -42,6 +42,7 @@ envoy_cc_extension(
         "//source/common/http:utility_lib",
         "//source/common/http/http1:codec_lib",
         "//source/common/http/http2:codec_lib",
+        "//source/common/http/http3:codec_stats_lib",
         "//source/common/json:json_loader_lib",
         "//source/common/local_reply:local_reply_lib",
         "//source/common/protobuf:utility_lib",
