Code review fixes
Signed-off-by: Charlie Getzen <charliegetzenlc@gmail.com>

--- a/source/extensions/load_balancers/shuffle_shard/BUILD
+++ b/source/extensions/load_balancers/shuffle_shard/BUILD
@@ -11,13 +11,8 @@ envoy_extension_package()
 
 envoy_cc_library(
     name = "shuffle_shard_lb",
-    srcs = [
-        "load_balancer.cc",
-        "load_balancer.h",
-    ],
-    hdrs = [
-      "load_balancer.h",
-    ],
+    srcs = ["load_balancer.cc"],
+    hdrs = ["load_balancer.h"],
     deps = [
       "//source/common/config:well_known_names",
       "//source/common/upstream:load_balancer_lib",
