--- a/.bazelrc
+++ b/.bazelrc
@@ -29,6 +29,7 @@ build:linux --features=per_object_debug_info
 
 # We already have absl in the build, define absl=1 to tell googletest to use absl for backtrace.
 build --define absl=1
+build --//bazel:http3=False
 
 # Pass PATH, CC, CXX and LLVM_CONFIG variables from the environment.
 build --action_env=CC
