--- a/tools/code_format/BUILD
+++ b/tools/code_format/BUILD
@@ -22,3 +22,9 @@ envoy_py_binary(
         requirement("yapf"),
     ],
 )
+
+py_binary(
+    name = "rst_check",
+    srcs = ["rst_check.py"],
+    visibility = ["//visibility:public"],
+)
