--- a/test/common/http/BUILD
+++ b/test/common/http/BUILD
@@ -415,7 +415,8 @@ envoy_cc_test(
     ],
 )
 
-# TODO(mattklein123): Use compatible with when we move to Bazel 4.0.
+# TODO(alyssawilk): The conn pool grid should work correctly without H3. Circle back and figure
+# out the right way of handling the lack of H3 in the build.
 envoy_cc_test(
     name = "conn_pool_grid_test",
     srcs = envoy_select_enable_http3(["conn_pool_grid_test.cc"]),
