--- a/examples/ext_authz/Dockerfile-frontenvoy
+++ b/examples/ext_authz/Dockerfile-frontenvoy
@@ -4,6 +4,14 @@ RUN apt-get update && apt-get -q install -y \
     curl
 COPY ./config /etc/envoy-config
 COPY ./run_envoy.sh /run_envoy.sh
+
+# XXX FIXME REVERT
+COPY ./envoy-static /usr/local/bin/envoy
 RUN chmod go+r -R /etc/envoy-config \
     && chmod go+rx /run_envoy.sh /etc/envoy-config /etc/envoy-config/*
 CMD ["/bin/sh", "/run_envoy.sh"]
+
+# NOTES
+# cp -f ../../bazel-bin/source/exe/envoy-static . && docker-compose build --parallel && docker-compose up
+
+# curl -v -X POST -H "Authorization: Bearer token1"  -H "Content-Type:application/grpc" localhost:8000/service
