--- a/api/envoy/extensions/load_balancers/shuffle_shard/v3/BUILD
+++ b/api/envoy/extensions/load_balancers/shuffle_shard/v3/BUILD
@@ -5,8 +5,5 @@ load("@envoy_api//bazel:api_build_system.bzl", "api_proto_package")
 licenses(["notice"])  # Apache 2
 
 api_proto_package(
-    deps = [
-        "@com_github_cncf_udpa//udpa/annotations:pkg",
-        "@com_google_googleapis//google/api/expr/v1alpha1:syntax_proto",
-    ],
+    deps = ["@com_github_cncf_udpa//udpa/annotations:pkg"],
 )
