python: Integrate linting/utils/tests
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,10 @@
 [run]
 omit =
-     tools/
-     */pytest_*.py
+	tools/*
 
 [report]
 exclude_lines =
-        pragma: no cover
-        raise NotImplementedError
-        pass
-        if __name__ == .__main__.:
+	pragma: no cover
+	raise NotImplementedError
+	pass
+	if __name__ == .__main__.:
