envoy build: fix cache location

--- a/.github/workflows/build-envoy-for-curiefense.yml
+++ b/.github/workflows/build-envoy-for-curiefense.yml
@@ -23,7 +23,7 @@ jobs:
           path: "/cache"
           key: bazel
       - run: |
-          export ENVOY_DOCKER_OPTIONS="-v /cache:/home/.cache"
+          export ENVOY_DOCKER_OPTIONS="-v /cache:/build/.cache"
           export BAZEL_BUILD_EXTRA_OPTIONS="--define exported_symbols=enabled"
           ./ci/run_envoy_docker.sh './ci/do_ci.sh bazel.release.server_only'
           mkdir -p cf-docker
