Initial implementation of buffer accounting for h2.
Signed-off-by: Kevin Baichoo <kbaichoo@google.com>

--- a/include/envoy/common/BUILD
+++ b/include/envoy/common/BUILD
@@ -91,3 +91,8 @@ envoy_cc_library(
     name = "scope_tracker_interface",
     hdrs = ["scope_tracker.h"],
 )
+
+envoy_cc_library(
+    name = "account_interface",
+    hdrs = ["account.h"],
+)
