--- a/.bazelrc
+++ b/.bazelrc
@@ -321,6 +321,8 @@ build:compdb --build_tag_filters=-nocompdb
 
 # Windows build quirks
 build:windows --action_env=TMPDIR
+build:windows --action_env=INCLUDE
+build:windows --action_env=LIB
 build:windows --define signal_trace=disabled
 build:windows --define hot_restart=disabled
 build:windows --define tcmalloc=disabled
