Address latest batch of comments
Left a comment/TODO about the proper protobuf type the createExtension()
method should receive.

Signed-off-by: Raul Gutierrez Segales <rgs@pinterest.com>

--- a/source/extensions/original_ip_detection/xff/BUILD
+++ b/source/extensions/original_ip_detection/xff/BUILD
@@ -34,6 +34,7 @@ envoy_cc_extension(
         ":xff_lib",
         "//include/envoy/http:original_ip_detection_interface",
         "//include/envoy/registry",
+        "//source/common/config:utility_lib",
         "@envoy_api//envoy/extensions/original_ip_detection/xff/v3:pkg_cc_proto",
     ],
 )
