--- a/tools/testing/BUILD
+++ b/tools/testing/BUILD
@@ -1,6 +1,7 @@
-load("@rules_python//python:defs.bzl", "py_binary", "py_library")
+load("@rules_python//python:defs.bzl", "py_library")
 load("@testing_pip3//:requirements.bzl", "requirement")
 load("//bazel:envoy_build_system.bzl", "envoy_package")
+load("//tools/base:envoy_python.bzl", "envoy_py_binary")
 
 licenses(["notice"])  # Apache 2
 
@@ -12,37 +13,12 @@ py_library(
     visibility = ["//visibility:public"],
 )
 
-py_binary(
-    name = "python_pytest",
-    srcs = ["python_pytest.py"],
-    data = [
-        ":plugin",
-        "//:.coveragerc",
-        "//:pytest.ini",
-        "//tools/base:runner",
-        "//tools/base:utils",
-    ],
-    visibility = ["//visibility:public"],
+envoy_py_binary(
+    "tools.testing.python_pytest",
     deps = [
         requirement("pytest"),
         requirement("pytest-cov"),
     ],
-)
-
-py_binary(
-    name = "pytest_python_pytest",
-    srcs = [
-        "pytest_python_pytest.py",
-        "tests/test_python_pytest.py",
-    ],
-    deps = [
-        ":python_pytest",
-    ],
-)
-
-py_binary(
-    name = "python_coverage",
-    srcs = ["python_coverage.py"],
     data = [
         ":plugin",
         "//:.coveragerc",
@@ -50,20 +26,17 @@ py_binary(
         "//tools/base:runner",
         "//tools/base:utils",
     ],
-    visibility = ["//visibility:public"],
+)
+
+envoy_py_binary(
+    "tools.testing.python_coverage",
     deps = [
         requirement("coverage"),
     ],
-)
-
-py_binary(
-    name = "pytest_python_coverage",
-    srcs = [
-        "pytest_python_coverage.py",
-        "tests/test_python_coverage.py",
-    ],
-    deps = [
-        ":python_coverage",
-        "//tools/testing:python_pytest",
+    data = [
+        ":plugin",
+        "//:.coveragerc",
+        "//tools/base:runner",
+        "//tools/base:utils",
     ],
 )
