--- a/test/config_test/BUILD
+++ b/test/config_test/BUILD
@@ -22,6 +22,7 @@ envoy_cc_test(
         "example_configs_test_setup.sh",
         "//configs:example_configs",
     ],
+    size = "large",
     deps = [
         ":config_test_lib",
         "//source/common/filesystem:filesystem_lib",
